force-app/main/default/objects/Avatar__c/Avatar__c.object-meta.xml
<CustomObject>
    <label>Avatar</label>
    <nameField>
        <label>Avatar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Avatars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>