force-app/main/default/objects/Avatar__c/fields/Parental_control__c.field-meta.xml
<CustomField>
    <fullName>Parental_control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this checkbox to block access attempt to parental content.</description>
    <label>Parental control</label>
    <type>Checkbox</type>
</CustomField>