force-app/main/default/objects/Avatar__c/fields/Primary_avatar__c.field-meta.xml
<CustomField>
    <fullName>Primary_avatar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this checkbox to use this avatar as principal.</description>
    <label>Primary avatar</label>
    <type>Checkbox</type>
</CustomField>